Chess をブックマークに追加する

--- a/src/index.html
+++ b/src/index.html
@@ -123,6 +123,10 @@
           "How to do curation and businesses on Nostr",
           "naddr1qvzqqqr4gupzqwlsccluhy6xxsr6l9a9uhhxf75g85g8a709tprjcn4e42h053vaqqyrze35vscrzvfcnx3g2h",
         ],
+        [
+          "Chess",
+          "nevent1qqszyvyhx69weu5mvjn65nyrdeapsjd2c0c0tjpwms02kh3gup43nvs0xf5q9",
+        ],
       ];
 
       const defaultRelays = [
