コンテンツを表示する前に iframe をブランクにする

--- a/src/index.html
+++ b/src/index.html
@@ -223,6 +223,7 @@
                     updateNavigationButtonClass(forward);
                     document.querySelector("#uri").value = nip19String;
 
+                    iframe.contentWindow.location.replace("about:blank");
                     comments.innerHTML = "";
 
                     const render = createRenderer(event);
