nostr-tools を 2.7.2 にアップデートする

--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
       </button>
     </template>
 
-    <script src="https://unpkg.com/nostr-tools@1.17.0/lib/nostr.bundle.js"></script>
+    <script src="https://unpkg.com/nostr-tools@2.7.2/lib/nostr.bundle.js"></script>
     <script src="convertNip21sToResource.js"></script>
     <script>
       const bookmarks = [
@@ -177,7 +177,7 @@
           (nip21) => window.NostrTools.nip21.parse(nip21).decoded
         );
         const filters = nip19s.map(createFilter);
-        const events = await pool.list(defaultRelays, filters);
+        const events = await querySyncMany(pool, defaultRelays, filters);
         await pool.close(defaultRelays);
 
         return nip21s.reduce((acc, obj, ind) => {
@@ -239,6 +239,20 @@
                   );
             })()
           : window.open(`https://njump.me/${nip19String}`);
+      };
+
+      const querySyncMany = async (pool, relays, filters) => {
+        return new Promise(async (resolve) => {
+          const events = [];
+          pool.subscribeManyEose(relays, filters, {
+            onevent(event) {
+              events.push(event);
+            },
+            onclose(_) {
+              resolve(events);
+            },
+          });
+        });
       };
 
       const unescapeXML = (xml) =>
