URI フィールドの横幅を修正する

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
         type="text"
         size="50"
         value="nevent1qqst99d8u7484nv3tsnthh6xpvz0nc8fdfug9q5ch2yxwmjllfm5ccsp5602c"
-        class="w-full bg-gray-100 rounded-full py-1 px-4 mr-1 ml-2 text-gray-700 text-sm"
+        class="grow h-full bg-gray-100 rounded-full py-1 px-4 mr-1 ml-2 text-gray-700 text-sm"
       />
       <button
         onclick="handleClick()"
