hideDropdown is not defined を修正する

--- a/src/index.html
+++ b/src/index.html
@@ -439,7 +439,7 @@
               sk = window.NostrTools.nip19.decode(nsec.value).data;
 
               nsec.value = "";
-              hideDropdown();
+              hidePopup();
               rerenderNocomment();
 
               const pool = new window.NostrTools.SimplePool();
