--- a/src/index.html
+++ b/src/index.html
@@ -472,6 +472,7 @@
 
       const handleLogoutClick = () => {
         sk = null;
+        rerenderNocomment();
         placeholderIcon.classList.remove("hidden");
         avatar.classList.add("hidden");
         letterAvatar.classList.add("hidden");
